a1/brendan_gordon/TEST_PROGRAMS/invalidtype/frederic_lafrance/3.min
# Can't declare a variable twice, even if it's the same type.

var x: int;
var x: int;

